--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -43,10 +43,10 @@ jobs:
         working-directory: ./terraform
         run: terraform plan -input=false
 
- #     - name: Terraform Apply
- #       env:
- #         TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
- #         TF_VAR_aws_ami: ${{ secrets.AWS_AMI }}
- #       id: apply
- #       working-directory: ./terraform
- #       run: terraform apply -auto-approve -input=false
+      - name: Terraform Apply
+        env:
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+          TF_VAR_aws_ami: ${{ secrets.AWS_AMI }}
+        id: apply
+        working-directory: ./terraform
+        run: terraform apply -auto-approve -input=false
